--- a/TreeBalance.Tests/TreeBalance.Tests.csproj
+++ b/TreeBalance.Tests/TreeBalance.Tests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
         <PackageReference Include="Selenium.Support" Version="4.0.0-alpha05" />
         <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha05" />
@@ -16,7 +17,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\TreeBalance.API\TreeBalance.API.csproj" />
       <ProjectReference Include="..\TreeBalance.Shared\TreeBalance.Shared.csproj" />
+      <ProjectReference Include="..\TreeBalance.WEB\TreeBalance.WEB.csproj" />
     </ItemGroup>
 
 </Project>
